# money-never-sleep

./: .gitignore  AGENTS.md  Cargo.toml  PRD.txt  README.md  README_zh.md
.agents/skills/mns-backtest/: BACKTEST_REPORT.md  DIVIDEND_LOW_VOL_REPORT.md  FINAL_REPORT.md  MULTI_ASSET_REPORT.md  SKILL.md
.agents/skills/mns-backtest/data/: DATA_README.md  config_balanced.toml  config_circuit_breaker.toml  config_defensive.toml  config_extreme_contrarian.toml  config_historical_aggressive.toml  config_optimal.toml  config_swing.toml  config_value.toml  fetch_monthly_data.py  fgi_2016_2020.csv  fgi_2020_2025.csv  generate_monthly_data.py  hs300_monthly.csv  monthly_dividend_low_vol.csv  (+6 more)
.ai-context/: DYNAMICS.md  SKILL.md
.ai-context/meta/: MAINTENANCE.md
.ai-context/references/: ARCHITECTURE.md  DECISIONS.md  PROJECT-ESSENCE.md
distribution/bin-darwin-arm64/: package.json
distribution/bin-linux-x64/: .gitignore  package.json
distribution/bin-mns-cli/: README.md  package.json
distribution/bin-win-x64/: .gitignore  package.json
distribution/skill/mns-cli/: README.md  SKILL.md  package.json
distribution/skill/money-never-sleep/: README.md  SKILL.md  package.json
docs/: finance-query-research.md
litho.docs/: 1、项目概述.md  2、架构概览.md  3、工作流程.md  5、边界调用.md  6、数据库概览.md  __Litho_Summary_Brief__.md  __Litho_Summary_Detail__.md  策略回测引擎.md  自动价格获取模块.md
litho.docs/4、深入探索/: 命令行接口.md  外部数据获取.md  报告生成服务.md  数据模型与持久化.md  核心策略引擎.md  系统入口.md  配置管理.md
src/: backtest.rs  cli.rs  config.rs  db.rs  main.rs  market.rs  models.rs  quote.rs  report.rs  sentiment.rs  strategy.rs
(+15 files in other folders)
